--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:prpl-server": "polymer build --auto-base-path && gulp prpl-server",
     "build:static": "polymer build",
     "serve:prpl-server": "prpl-server --root server/build",
-    "serve:static": "polymer serve --port 5000 build/es5-bundled",
+    "serve:static": "polymer serve --hostname 0.0.0.0 --port 5000 build/es5-bundled",
     "test": "rm -rf build/ && polymer lint && polymer test"
   },
   "dependencies": {
