--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,28 @@
 {
-  "name": "SHOP",
-  "short_name": "SHOP",
-  "icons": [{
+  "name": "EASYSEC E-SHOP",
+  "short_name": "E-SHOP",
+  "icons": [
+    {
       "src": "images/shop-icon-128.png",
       "sizes": "128x128",
       "type": "image/png"
-    }, {
+    },
+    {
       "src": "images/shop-icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
-    },{
+    },
+    {
       "src": "images/shop-icon-384.png",
       "sizes": "384x384",
       "type": "image/png"
-    },{
+    },
+    {
       "src": "images/shop-icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
-    }],
+    }
+  ],
   "start_url": "/",
   "background_color": "#fff",
   "display": "standalone",
